--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -2,6 +2,7 @@
     <input 
     type="text" 
     name="termino" 
+    [placeholder]="placeholder"
     class="form-control"  
     [(ngModel)]="termino"
     (input)="teclaPresionada()"/>
