--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -3,10 +3,10 @@
 <div class="row">
     <div class="col">
         <app-pais-input 
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)"
-        placeholder="Buscar Capital">
-    </app-pais-input>
+            (onEnter)="buscar($event)"
+            (onDebounce)="sugerencias($event)"
+            [placeholder]="buscarCapital">
+        </app-pais-input>
     </div>
 </div>
 <hr>
