--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -2,13 +2,26 @@
 <hr>
 <div class="row">
     <div class="col">
-        <app-pais-input 
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)">
-    </app-pais-input>
+        <app-pais-input (onEnter)="buscar($event)" (onDebounce)="sugerencias($event)" placeholder="Buscar Pais...">
+        </app-pais-input>
     </div>
 </div>
+
+<ul *ngIf="mostrarSugerencia" class="list-group">
+    <li *ngFor="let paises of paisesSugeridos" class="list-group-item list-group-item-action">
+        <a class="nav-link" [routerLink]="['/pais',paises.alpha2Code]">{{paises.name}}</a>
+
+    </li>
+    <li
+    (click)="buscarSugerido (termino)" 
+    class="list-group-item list-group-item-action">
+        <a class="nav-link">Buscar "{{termino}}"</a>
+
+    </li>
+</ul>
+
 <hr>
+
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontro nada con el termino {{termino}}
 </div>
