--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -5,7 +5,7 @@
         <app-pais-input 
             (onEnter)="buscar($event)"
             (onDebounce)="sugerencias($event)"
-            [placeholder]="buscarCapital">
+            placeholder="Buscar Capital...">
         </app-pais-input>
     </div>
 </div>
