--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,20 +1,24 @@
-<h2>Por region</h2>
+<h3>Buscar por region <small>{{regionActiva |titlecase}}</small></h3>
 <hr>
+
+<h5>Seleccione la region</h5>
+
 <div class="row">
     <div class="col">
-        <app-pais-input 
-        (onEnter)="buscar($event)"
-        (onDebounce)="sugerencias($event)">
-    </app-pais-input>
+
+        <!-- MANERA 1 DE SELECCION Y RESALTAR ---- NO SOBREESCRIBE EL ESTILO ANTERIOR ---- -->
+        <!--  [class.btn-primary]="region===regionActiva"  -->
+
+        <!-- MANERA 2 DE LOS MISMO PERO AHORA ARREGLANDO LOS ESTILOS ---- VALIDA 2 VECES POR ESO NO ES CONVENIENTE -->
+        <!--  [ngClass]="
+            {'btn-primary':regionActiva === region,
+        'btn-outline-primary':regionActiva !== region}" -->
+
+        <button *ngFor="let region of regiones" class="btn btn-outline-primary" [class]="getClaseCSS(region)"
+            (click)="activarRegion(region)">
+            {{region | titlecase}}
+        </button>
     </div>
-</div>
-<hr>
-<div *ngIf="hayError" class="alert alert-danger">
-    No se encontro nada con el termino {{termino}}
 </div>
 
-<div *ngIf="region.length>0" class="row">
-    <div class="col">
-        <app-pais-tabla [paises]="region"></app-pais-tabla>
-    </div>
-</div>
+<app-pais-tabla [paises]="region"></app-pais-tabla>
